--- a/examples/admin/src/app/dashboard/theme-switcher/theme-switcher.component.scss
+++ b/examples/admin/src/app/dashboard/theme-switcher/theme-switcher.component.scss
@@ -1,3 +1,6 @@
 a {
-  @apply cursor-pointer inline-flex items-center gap-x-2;
+  display: inline-flex;
+  cursor: pointer;
+  align-items: center;
+  column-gap: 0.5rem;
 }
