--- a/lib/src/components/explorer/renderer/default/object/boolean/boolean-object-renderer.component.scss
+++ b/lib/src/components/explorer/renderer/default/object/boolean/boolean-object-renderer.component.scss
@@ -1,8 +1,14 @@
 :host {
-  @apply border block p-4 rounded;
+  display: block;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  padding: 1rem;
   border-color: var(--surface-d);
 }
 
 .cbx-container {
-  @apply flex gap-x-2 items-center w-full;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  column-gap: 0.5rem;
 }
