--- a/examples/admin/src/app/app.component.scss
+++ b/examples/admin/src/app/app.component.scss
@@ -1,4 +1,8 @@
 :host {
-  @apply flex flex-col justify-center items-center w-full;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
 }
