--- a/examples/admin/src/app/dashboard/menu/menu-tree.component.scss
+++ b/examples/admin/src/app/dashboard/menu/menu-tree.component.scss
@@ -1,8 +1,10 @@
 :host {
   & > ul {
-    @apply h-auto opacity-100 #{!important};
+    height: auto !important;
+    opacity: 1 !important;
     & > li {
-      @apply my-0.5;
+      margin-top: 0.125rem;
+      margin-bottom: 0.125rem;
     }
   }
 }
@@ -16,38 +18,47 @@ ul {
       & > a {
         & > span {
           & + i {
-            @apply transform rotate-180;
+            transform: rotate(180deg);
           }
         }
       }
     }
 
     a {
-      @apply cursor-pointer flex items-center justify-between px-6 py-2;
+      display: flex;
+      cursor: pointer;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.5rem 1.5rem;
+
       span {
-        @apply gap-x-2 flex items-center;
+        display: flex;
+        align-items: center;
+        column-gap: 0.5rem;
       }
     }
   }
 
   ul {
-    @apply pl-2;
+    padding-left: 0.5rem;
 
     a {
-      @apply text-sm;
+      font-size: 0.875rem;
+      line-height: 1.25rem;
     }
 
     i {
-      @apply text-xs;
+      font-size: 0.75rem;
+      line-height: 1rem;
     }
 
     .ctrl {
-      @apply p-1.5;
+      padding: 0.375rem;
     }
   }
 
 }
 
 .ctrl {
-  @apply p-1;
+  padding: 0.25rem;
 }
