--- a/lib/src/components/config/editor/config-property-editor.component.scss
+++ b/lib/src/components/config/editor/config-property-editor.component.scss
@@ -1,13 +1,22 @@
 :host {
   & > div {
-    @apply py-2 flex flex-col items-center justify-center gap-8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
 
 input, textarea, .p-float-label {
-  @apply w-full;
+  width: 100%;
 }
 
 .actions {
-  @apply flex justify-center items-center gap-8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
