--- a/lib/src/components/explorer/renderer/custom/object/file-stat/file-stat-media-object-renderer.component.scss
+++ b/lib/src/components/explorer/renderer/custom/object/file-stat/file-stat-media-object-renderer.component.scss
@@ -1,10 +1,15 @@
 :host {
-  @apply border block p-4 rounded;
+  display: block;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  padding: 1rem;
   border-color: var(--surface-d);
 }
 
 .label {
-  @apply py-2 font-semibold;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 600;
 }
 
 span {
