--- a/lib/src/components/explorer/renderer/custom/object/new-password/new-password-object-renderer.component.scss
+++ b/lib/src/components/explorer/renderer/custom/object/new-password/new-password-object-renderer.component.scss
@@ -1,12 +1,17 @@
 :host {
-  @apply flex flex-col gap-4 border p-4 rounded;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  padding: 1rem;
   border-color: var(--surface-d);
 
   ::ng-deep {
     p-password {
-      @apply w-full;
+      width: 100%;
       & > div, input {
-        @apply w-full;
+        width: 100%;
       }
     }
   }
@@ -14,6 +19,8 @@
 }
 
 .label {
-  @apply py-2 font-semibold;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 600;
 }
 
