--- a/lib/src/components/explorer/renderer/custom/object/process/stats/process-stats-object-renderer.component.scss
+++ b/lib/src/components/explorer/renderer/custom/object/process/stats/process-stats-object-renderer.component.scss
@@ -1,14 +1,21 @@
 :host {
-  @apply border block p-4 rounded;
+  display: block;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  padding: 1rem;
   border-color: var(--surface-d);
 }
 
 .label {
-  @apply py-2 font-semibold;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 600;
 }
 
 .status {
-  @apply font-semibold flex gap-x-8;
+  display: flex;
+  column-gap: 2rem;
+  font-weight: 600;
 }
 
 .enabled {
@@ -32,7 +39,11 @@
 }
 
 .logs {
-  @apply flex flex-col gap-y-1 text-sm;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   ::ng-deep {
     & > div {
       &.log {
