--- a/lib/src/components/explorer/renderer/default/object/date/date-object-renderer.component.scss
+++ b/lib/src/components/explorer/renderer/default/object/date/date-object-renderer.component.scss
@@ -1,23 +1,30 @@
 :host {
-  @apply border block p-4 rounded;
+  display: block;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  padding: 1rem;
   border-color: var(--surface-d);
   ::ng-deep {
     p-calendar {
       & > span {
-        @apply w-full;
+        width: 100%;
       }
     }
   }
 }
 
 label {
-  @apply flex flex-col gap-4;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   span {
     &:first-child {
-      @apply font-semibold;
+      font-weight: 600;
     }
     &:last-child:not(.string-value) {
-      @apply text-xs pb-4;
+      padding-bottom: 1rem;
+      font-size: 0.75rem;
+      line-height: 1rem;
       color: var(--warn-color);
     }
   }
