--- a/lib/src/components/explorer/section/filter/section-filter-dialog.component.scss
+++ b/lib/src/components/explorer/section/filter/section-filter-dialog.component.scss
@@ -1,13 +1,18 @@
 :host {
-  @apply relative;
+  position: relative;
+
   & > ul {
     & > li:not(:last-child) {
-      @apply mb-4;
+      margin-bottom: 1rem;
     }
 
     ul {
-      @apply ml-0 mt-1 mb-2;
-      @apply lg:ml-3;
+      margin-left: 0;
+      margin-top: 0.25rem;
+      margin-bottom: 0.5rem;
+      @media (min-width: 1024px) {
+        margin-left: 0.75rem;
+      }
     }
   }
 }
@@ -15,22 +20,26 @@
 ul {
   li {
     a, span {
-      @apply inline-flex items-center gap-x-2;
+      display: inline-flex;
+      align-items: center;
+      column-gap: 0.5rem;
     }
 
     span {
-      @apply font-semibold;
+      font-weight: 600;
     }
 
     a {
-      @apply cursor-pointer;
+      cursor: pointer;
       &:hover {
         color: var(--primary-color);
       }
 
       &.select-field {
         span {
-          @apply font-normal text-sm;
+          font-size: 0.875rem;
+          line-height: 1.25rem;
+          font-weight: 400;
         }
 
         &:hover {
@@ -42,22 +51,27 @@ ul {
 }
 
 i {
-  @apply text-xs;
+  font-size: 0.75rem;
+  line-height: 1rem;
   &.active {
     color: var(--accent-color);
   }
 }
 
 input {
-  @apply my-2;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .actions {
-  @apply mt-4 text-center;
+  margin-top: 1rem;
+  text-align: center;
 }
 
 .ctrl-wrapper {
-  @apply flex gap-x-2 items-center;
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
 }
 
 .orange {
@@ -69,9 +83,11 @@ input {
 }
 
 .reference {
-  @apply flex gap-x-2;
+  display: flex;
+  column-gap: 0.5rem;
 }
 
 p {
-  @apply my-2;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
