--- a/lib/src/components/explorer/section/section.component.scss
+++ b/lib/src/components/explorer/section/section.component.scss
@@ -13,38 +13,43 @@
       width: max-content;
     }
 
-    @screen sm {
+    @media (min-width: 640px) {
       .p-paginator, .p-datatable-thead tr:first-child th {
-        @apply rounded-t;
+        border-top-left-radius: 0.25rem;
+        border-top-right-radius: 0.25rem;
       }
     }
 
     .p-datatable-thead tr:last-child th, tbody tr:last-child td {
-      @apply border-0;
+      border-width: 0;
     }
 
     .p-paginator {
-      @apply border-0;
+      border-width: 0;
       height: var(--paginator-h);
     }
 
     p-paginator .p-element.p-dropdown-label.p-inputtext {
-      @apply px-4 py-3;
+      padding: 0.75rem 1rem;
     }
 
     .p-datatable-table {
-      @apply border-separate;
+      border-collapse: separate;
     }
 
     .p-datatable-wrapper, .p-datatable {
-      @apply h-full;
+      height: 100%;
     }
 
     .p-datatable-thead {
       th {
-        @apply whitespace-nowrap;
+        white-space: nowrap;
         i {
-          @apply px-1 rounded-full text-xs leading-3;
+          border-radius: 9999px;
+          padding-left: 0.25rem;
+          padding-right: 0.25rem;
+          font-size: 0.75rem;
+          line-height: .75rem;
         }
       }
     }
@@ -55,15 +60,16 @@
 
 th {
   &:hover {
-    @apply relative;
+    position: relative;
 
     i.ctrl {
-      @apply visible;
+      visibility: visible;
     }
   }
 
   i.ctrl {
-    @apply invisible cursor-pointer;
+    visibility: hidden;
+    cursor: pointer;
     &:hover {
       color: var(--accent-color);
     }
@@ -72,14 +78,15 @@ th {
 
 .line {
   &:hover {
-    @apply cursor-pointer select-none;
+    cursor: pointer;
+    user-select: none;
     background: var(--surface-c);
   }
 }
 
 .indicator {
   color: var(--primary-color);
-  @apply cursor-pointer;
+  cursor: pointer;
 
   &:hover {
     &:before {
@@ -91,7 +98,7 @@ th {
 }
 
 .set-btn {
-  @apply cursor-pointer;
+  cursor: pointer;
   color: var(--danger-color);
 
   &:hover {
@@ -101,22 +108,32 @@ th {
 
 tr.selected {
   td {
-    @apply relative;
+    position: relative;
     &:after {
       content: "";
       background-color: var(--primary-color);
-      @apply absolute left-0 right-0 top-0 bottom-0 opacity-20;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      opacity: 0.2;
     }
   }
 }
 
 .section-actions {
-  @apply inline-flex items-center gap-x-4;
+  display: inline-flex;
+  align-items: center;
+  column-gap: 1rem;
   explorer-action-renderer, & > div {
-    @apply flex items-center justify-end gap-x-4;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    column-gap: 1rem;
   }
 }
 
 .default-action {
-  @apply mr-4;
+  margin-right: 1rem;
 }
