--- a/lib/src/components/object/details/column-editor/object-details-column-editor.component.scss
+++ b/lib/src/components/object/details/column-editor/object-details-column-editor.component.scss
@@ -1,20 +1,31 @@
 .content-wrapper {
   max-width: 100%;
   min-width: 50vw;
-  @apply flex flex-col gap-8 justify-between w-full;
-  @apply md:flex-row;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .tab {
-  @apply flex flex-col gap-6 w-full;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 1.5rem;
   ::ng-deep {
     textarea, input, p-inputnumber, .p-inputnumber, p-autoComplete, .p-autocomplete, .p-autocomplete-input {
-      @apply w-full;
+      width: 100%;
     }
   }
 }
 
 .actions {
-  @apply py-8 text-center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  text-align: center;
 }
 
