--- a/lib/src/components/object/details/object-details.component.scss
+++ b/lib/src/components/object/details/object-details.component.scss
@@ -1,14 +1,14 @@
 :host {
   max-width: 75vw;
-  @apply block;
+  display: block;
 }
 
 p-confirmDialog {
-  @apply w-full;
+  width: 100%;
   max-width: 400px;
 
   div, input {
-    @apply w-full;
+    width: 100%;
   }
 }
 
@@ -18,13 +18,29 @@ p-confirmDialog {
   }
 
   & > div {
-    @apply flex flex-col justify-between gap-0;
-    @apply md:flex-row md:gap-4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+    @media (min-width: 768px) {
+      flex-direction: row;
+      gap: 1rem;
+    }
+
     & > div {
-      @apply flex items-center gap-x-2;
+      display: flex;
+      align-items: center;
+      column-gap: 0.5rem;
+
       &:last-child {
-        @apply justify-end flex-row-reverse gap-x-0;
-        @apply md:justify-start md:flex-row md:gap-x-2;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        column-gap: 0;
+        @media (min-width: 768px) {
+          flex-direction: row;
+          justify-content: flex-start;
+          column-gap: 0.5rem;
+        }
       }
     }
   }
@@ -32,50 +48,79 @@ p-confirmDialog {
 }
 
 .cols {
-  @apply flex flex-col gap-4;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
   & > div:first-child {
-    @apply my-2 w-full;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: 100%;
+
     ::ng-deep {
       input {
-        @apply w-full;
+        width: 100%;
       }
     }
   }
 }
 
 .transparent {
-  @apply invisible;
+  visibility: hidden;
 }
 
 .cols-actions {
-  @apply flex justify-between;
+  display: flex;
+  justify-content: space-between;
+
   & > div {
-    @apply flex items-center;
+    display: flex;
+    align-items: center;
   }
 }
 
 .cbx-container {
-  @apply flex gap-x-2 items-center w-full;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  column-gap: 0.5rem;
 }
 
 .content-wrapper {
-  @apply grid grid-cols-1 gap-x-4 w-full;
-  @apply lg:grid-cols-2 lg:gap-x-8;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1rem;
+  @media (min-width: 1025px) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 2rem;
+  }
 }
 
 .data-grid {
   & > div {
-    @apply grid grid-cols-1 gap-2 py-1;
-    @apply md:grid-cols-2 md:gap-4;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 0.5rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 1rem;
+    }
+
     & > div {
-      @apply flex items-center gap-x-2;
+      display: flex;
+      align-items: center;
+      column-gap: 0.5rem;
+
       &:first-child {
         color: var(--surface-600);
-        @apply italic;
+        font-style: italic;
       }
 
       &:last-child {
-        @apply font-semibold;
+        font-weight: 600;
       }
     }
 
@@ -94,22 +139,31 @@ p-confirmDialog {
 }
 
 .right {
-  @apply relative;
+  position: relative;
+
   .info {
-    @apply sticky top-0;
+    position: sticky;
+    top: 0;
+
     & > div:not(.actions) {
-      @apply py-2;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
     }
   }
 }
 
 .actions {
-  @apply py-8 text-center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  text-align: center;
 }
 
 .tabs {
-  @apply flex flex-col gap-4;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
   div, input, p-inputNumber, textarea {
-    @apply w-full;
+    width: 100%;
   }
 }
