--- a/lib/src/components/profile/profile.component.scss
+++ b/lib/src/components/profile/profile.component.scss
@@ -1,11 +1,17 @@
 .wrap {
-  @apply grid grid-cols-1 gap-4;
-  @apply sm:grid-cols-2 sm:gap-6;
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  gap: 1rem;
   & > div {
-    @apply flex flex-col gap-4 py-4;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
 
 ul {
-  @apply list-disc pl-4;
+  list-style-type: disc;
+  padding-left: 1rem;
 }
