--- a/lib/src/modules/file/input/file-input.component.scss
+++ b/lib/src/modules/file/input/file-input.component.scss
@@ -1,23 +1,32 @@
 :host {
   ::ng-deep {
     .p-fileupload-content {
-      @apply px-0 pt-2 pb-4;
+      padding: 0.5rem 0 1rem;
     }
 
     .p-button-success {
-      @apply inline-flex items-center gap-x-1;
+      display: inline-flex;
+      align-items: center;
+      column-gap: 0.25rem;
     }
   }
 }
 
 h4 {
-  @apply px-4 py-2 font-semibold;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
 }
 
 .medias {
-  @apply px-4 flex flex-col gap-y-2;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   & > div {
-    @apply flex gap-2 items-center;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     ::ng-deep img {
       --s: 40px;
       max-width: var(--s);
@@ -27,6 +36,11 @@ h4 {
 }
 
 .stats {
-  @apply text-xs my-6 px-4;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
   color: var(--success-color);
 }
