--- a/lib/src/modules/preloader/preloader.component.scss
+++ b/lib/src/modules/preloader/preloader.component.scss
@@ -1,5 +1,13 @@
 :host {
-  @apply flex justify-center items-start absolute left-0 right-0 top-0 bottom-0 z-50;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 50;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   backdrop-filter: blur(5px);
   --p-size: 80px;
 
@@ -9,7 +17,7 @@
 }
 
 p-progressSpinner {
-  @apply sticky;
+  position: sticky;
   top: 30%;
 
   ::ng-deep {
