deploy: bfaf218ec24ad509c89628dec8f6b4113702d87e

--- a/components/FileInputComponent.html
+++ b/components/FileInputComponent.html
@@ -1762,7 +1762,7 @@ export class FileInputComponent implements ControlValueAccessor, OnChanges {
     this.cdr.markForCheck();
   }
 
-  onChange &#x3D; (res: KFile | KFile[]) &#x3D;&gt; {
+  onChange &#x3D; (_: KFile | KFile[]) &#x3D;&gt; {
   };
 
   onTouched &#x3D; () &#x3D;&gt; {
