--- a/components/LocalizeMediaInputComponent.html
+++ b/components/LocalizeMediaInputComponent.html
@@ -1152,7 +1152,7 @@ export class LocalizeMediaInputComponent implements ControlValueAccessor {
     this.cdr.markForCheck();
   }
 
-  onChange &#x3D; (res: LocalizedMedia[]) &#x3D;&gt; {
+  onChange &#x3D; (_: LocalizedMedia[]) &#x3D;&gt; {
   };
 
   onTouched &#x3D; () &#x3D;&gt; {
