--- a/components/LocalizeStringInputComponent.html
+++ b/components/LocalizeStringInputComponent.html
@@ -1092,7 +1092,7 @@ export class LocalizeStringInputComponent implements ControlValueAccessor {
     this.cdr.markForCheck();
   }
 
-  onChange &#x3D; (res: LocalizedString[]) &#x3D;&gt; {
+  onChange &#x3D; (_: LocalizedString[]) &#x3D;&gt; {
   };
 
   onTouched &#x3D; () &#x3D;&gt; {
