--- a/components/MediaInputComponent.html
+++ b/components/MediaInputComponent.html
@@ -1726,7 +1726,7 @@ export class MediaInputComponent implements ControlValueAccessor {
     this.cdr.markForCheck();
   }
 
-  onChange &#x3D; (res: Media | Media[]) &#x3D;&gt; {
+  onChange &#x3D; (_: Media | Media[]) &#x3D;&gt; {
   };
 
   onTouched &#x3D; () &#x3D;&gt; {
