--- a/components/RefInputComponent.html
+++ b/components/RefInputComponent.html
@@ -1459,7 +1459,7 @@ export class RefInputComponent implements ControlValueAccessor, OnInit {
     this.cdr.markForCheck();
   }
 
-  onChange &#x3D; (res: unknown | unknown[]) &#x3D;&gt; {
+  onChange &#x3D; (_: unknown | unknown[]) &#x3D;&gt; {
   };
 
   onTouched &#x3D; () &#x3D;&gt; {
