--- a/components/StartProcessActionRendererComponent.html
+++ b/components/StartProcessActionRendererComponent.html
@@ -325,8 +325,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="76"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:76</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="80"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:80</a></div>
                         </td>
                     </tr>
 
@@ -362,8 +362,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="86"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:86</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="90"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:90</a></div>
                         </td>
                     </tr>
 
@@ -405,7 +405,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -432,7 +432,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -459,7 +459,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -486,7 +486,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -647,7 +647,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:64</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:68</a></div>
                                 </td>
                             </tr>
 
@@ -669,7 +669,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:72</a></div>
                                 </td>
                             </tr>
 
@@ -691,7 +691,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:72</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:76</a></div>
                                 </td>
                             </tr>
 
@@ -715,7 +715,7 @@ import {RippleModule} from &quot;primeng/ripple&quot;;
 import {ButtonModule} from &quot;primeng/button&quot;;
 import {TranslocoPipe} from &quot;@ngneat/transloco&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
-import {finalize, throwError} from &quot;rxjs&quot;;
+import {throwError} from &quot;rxjs&quot;;
 import {takeUntilDestroyed} from &quot;@angular/core/rxjs-interop&quot;;
 import {ProcessService} from &quot;../../../../../../../../global/service&quot;;
 import {LocalizePipe} from &quot;../../../../../../../../modules/locale&quot;;
@@ -723,10 +723,14 @@ import {
   AbstractExplorerActionRenderer
 } from &quot;../../../../default/abstract-explorer-action-renderer&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
-import {ExplorerEvent, Explorer} from &quot;../../../../../../../explorer&quot;;
-import {ProcessStatus, ProcessUnit, ToastData} from &quot;../../../../../../../../global/vars&quot;;
-import {PreloaderEvent} from &quot;../../../../../../../../modules/preloader&quot;;
-import {ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
+import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
+import {
+  ProcessStatus,
+  ProcessUnit,
+  ToastData,
+  ToastEvent
+} from &quot;../../../../../../../../global/vars&quot;;
+import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
 @Component({
   selector: &quot;start-process-action-renderer&quot;,
@@ -772,15 +776,12 @@ export class StartProcessActionRendererComponent extends AbstractExplorerActionR
   }
 
   start() {
-    this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
     this.service.start((this.data() as ProcessUnit).code).pipe(
+      usePreloader(this.store, this.preloaderChannel),
       catchError((res) &#x3D;&gt; {
         this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
         return throwError(res);
-      }),
-      finalize(() &#x3D;&gt; {
-        this.store.emit(PreloaderEvent.Hide, this.preloaderChannel);
-      }),
+      })
     ).subscribe(() &#x3D;&gt; {
       this.store.emit(ExplorerEvent.ReloadObject);
     });
