--- a/components/ObjectComponent.html
+++ b/components/ObjectComponent.html
@@ -308,7 +308,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="93" class="link-to-prism">lib/src/components/object/src/object.component.ts:93</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">lib/src/components/object/src/object.component.ts:92</a></div>
                             </td>
                         </tr>
 
@@ -347,8 +347,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="112"
-                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:112</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="111"
+                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:111</a></div>
                         </td>
                     </tr>
 
@@ -426,8 +426,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:99</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="98"
+                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:98</a></div>
                         </td>
                     </tr>
 
@@ -642,11 +642,10 @@
     switchMap(filterValue &#x3D;&gt; {
       if (this.targetsCache.length &#x3D;&#x3D;&#x3D; 0) {
         return this.explorerService.getTargetList().pipe(
+          usePreloader(this.store, this.preloaderChannel),
           tap(targets &#x3D;&gt; {
             this.targetsCache &#x3D; targets;
-            this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
           }),
-          finalize(() &#x3D;&gt; this.store.emit(PreloaderEvent.Hide, this.preloaderChannel)),
           map(targetList &#x3D;&gt; this.findTarget(targetList, filterValue))
         );
       } else {
@@ -746,7 +745,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">lib/src/components/object/src/object.component.ts:91</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="90" class="link-to-prism">lib/src/components/object/src/object.component.ts:90</a></div>
                                 </td>
                             </tr>
 
@@ -760,7 +759,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component, inject} from &quot;@angular/core&quot;;
 import {TranslocoPipe, TranslocoService} from &quot;@ngneat/transloco&quot;;
 import {AsyncPipe} from &quot;@angular/common&quot;;
-import {debounceTime, distinctUntilChanged, finalize, of, startWith, switchMap, tap} from &quot;rxjs&quot;;
+import {debounceTime, distinctUntilChanged, of, startWith, switchMap, tap} from &quot;rxjs&quot;;
 import {CardModule} from &quot;primeng/card&quot;;
 import {BadgeModule} from &quot;primeng/badge&quot;;
 import {InputTextModule} from &quot;primeng/inputtext&quot;;
@@ -772,10 +771,10 @@ import {takeUntilDestroyed} from &quot;@angular/core/rxjs-interop&quot;;
 import {LocalizePipe} from &quot;../../../modules/locale&quot;;
 import {MediaComponent} from &quot;../../../modules/media&quot;;
 import {PreloaderComponent, PreloaderDirective} from &quot;../../../modules/preloader&quot;;
-import {ExplorerTarget, ExplorerService} from &quot;../../explorer&quot;;
+import {ExplorerService, ExplorerTarget} from &quot;../../explorer&quot;;
 import {Store} from &quot;../../../modules/store&quot;;
-import {PreloaderEvent} from &quot;../../../modules/preloader&quot;;
 import {DashboardEvent} from &quot;../../../global/vars&quot;;
+import {usePreloader} from &quot;../../../modules/preloader/src/use-preloader&quot;;
 
 @Component({
   selector: &quot;object&quot;,
@@ -818,11 +817,10 @@ export class ObjectComponent {
     switchMap(filterValue &#x3D;&gt; {
       if (this.targetsCache.length &#x3D;&#x3D;&#x3D; 0) {
         return this.explorerService.getTargetList().pipe(
+          usePreloader(this.store, this.preloaderChannel),
           tap(targets &#x3D;&gt; {
             this.targetsCache &#x3D; targets;
-            this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
           }),
-          finalize(() &#x3D;&gt; this.store.emit(PreloaderEvent.Hide, this.preloaderChannel)),
           map(targetList &#x3D;&gt; this.findTarget(targetList, filterValue))
         );
       } else {
