--- a/components/ReCreateMediaActionRendererComponent.html
+++ b/components/ReCreateMediaActionRendererComponent.html
@@ -618,7 +618,7 @@ import {ButtonModule} from &quot;primeng/button&quot;;
 import {ConfirmDialogModule} from &quot;primeng/confirmdialog&quot;;
 import {TranslocoPipe} from &quot;@ngneat/transloco&quot;;
 import {ConfirmationService} from &quot;primeng/api&quot;;
-import {finalize, throwError} from &quot;rxjs&quot;;
+import {throwError} from &quot;rxjs&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
 import {
   AbstractExplorerActionRenderer
@@ -627,9 +627,9 @@ import {PreloaderComponent} from &quot;../../../../../../../../modules/preloader
 import {LocalizePipe} from &quot;../../../../../../../../modules/locale&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {MediaService} from &quot;../../../../../../../../modules/media&quot;;
-import {ExplorerEvent, Explorer} from &quot;../../../../../../../explorer&quot;;
-import {PreloaderEvent} from &quot;../../../../../../../../modules/preloader&quot;;
+import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
+import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
 @Component({
   selector: &quot;re-create-media-action-renderer&quot;,
@@ -661,15 +661,13 @@ export class ReCreateMediaActionRendererComponent extends AbstractExplorerAction
     this.confirmationService.confirm({
       key: this.dialogKey,
       accept: () &#x3D;&gt; {
-        this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
         this.service.reCreate(this.entityForm().controls.id.value).pipe(
+          usePreloader(this.store, this.preloaderChannel),
           catchError((res) &#x3D;&gt; {
             this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
             return throwError(res);
-          }),
-          finalize(() &#x3D;&gt; {
-            this.store.emit(PreloaderEvent.Hide, this.preloaderChannel);
-          })).subscribe(() &#x3D;&gt; {
+          })
+        ).subscribe(() &#x3D;&gt; {
           this.store.emit(ExplorerEvent.ReloadObject);
         });
       }
