--- a/components/StopProcessActionRendererComponent.html
+++ b/components/StopProcessActionRendererComponent.html
@@ -715,7 +715,7 @@ import {RippleModule} from &quot;primeng/ripple&quot;;
 import {ButtonModule} from &quot;primeng/button&quot;;
 import {TranslocoPipe} from &quot;@ngneat/transloco&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
-import {finalize, throwError} from &quot;rxjs&quot;;
+import {throwError} from &quot;rxjs&quot;;
 import {takeUntilDestroyed} from &quot;@angular/core/rxjs-interop&quot;;
 import {ProcessService} from &quot;../../../../../../../../global/service&quot;;
 import {LocalizePipe} from &quot;../../../../../../../../modules/locale&quot;;
@@ -724,13 +724,13 @@ import {
 } from &quot;../../../../default/abstract-explorer-action-renderer&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {
-  ToastEvent,
   ProcessStatus,
   ProcessUnit,
-  ToastData
+  ToastData,
+  ToastEvent
 } from &quot;../../../../../../../../global/vars&quot;;
-import {PreloaderEvent} from &quot;../../../../../../../../modules/preloader&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
+import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
 @Component({
   selector: &quot;stop-process-action-renderer&quot;,
@@ -776,14 +776,11 @@ export class StopProcessActionRendererComponent extends AbstractExplorerActionRe
   }
 
   stop() {
-    this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
     this.service.stop((this.data() as ProcessUnit).code).pipe(
+      usePreloader(this.store, this.preloaderChannel),
       catchError((res) &#x3D;&gt; {
         this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
         return throwError(res);
-      }),
-      finalize(() &#x3D;&gt; {
-        this.store.emit(PreloaderEvent.Hide, this.preloaderChannel);
       }),
     ).subscribe(() &#x3D;&gt; {
       this.store.emit(ExplorerEvent.ReloadObject);
