--- a/components/ToggleProcessActionRendererComponent.html
+++ b/components/ToggleProcessActionRendererComponent.html
@@ -691,16 +691,16 @@ import {ButtonModule} from &quot;primeng/button&quot;;
 import {TranslocoPipe} from &quot;@ngneat/transloco&quot;;
 import {NgClass} from &quot;@angular/common&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
-import {finalize, throwError} from &quot;rxjs&quot;;
+import {throwError} from &quot;rxjs&quot;;
 import {takeUntilDestroyed} from &quot;@angular/core/rxjs-interop&quot;;
 import {ProcessService} from &quot;../../../../../../../../global/service&quot;;
 import {
   AbstractExplorerActionRenderer
 } from &quot;../../../../default/abstract-explorer-action-renderer&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
-import {ExplorerEvent, Explorer} from &quot;../../../../../../../explorer&quot;;
-import {PreloaderEvent} from &quot;../../../../../../../../modules/preloader&quot;;
-import {ToastEvent, ProcessUnit, ToastData} from &quot;../../../../../../../../global/vars&quot;;
+import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
+import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
+import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
 @Component({
   selector: &quot;toggle-process-action-renderer&quot;,
@@ -742,15 +742,12 @@ export class ToggleProcessActionRendererComponent extends AbstractExplorerAction
   }
 
   toggle() {
-    this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
     this.service.toggle((this.data() as ProcessUnit).code).pipe(
+      usePreloader(this.store, this.preloaderChannel),
       catchError((res) &#x3D;&gt; {
         this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
         return throwError(res);
-      }),
-      finalize(() &#x3D;&gt; {
-        this.store.emit(PreloaderEvent.Hide, this.preloaderChannel);
-      }),
+      })
     ).subscribe(() &#x3D;&gt; {
       this.store.emit(ExplorerEvent.ReloadObject);
     });
